--- a/inde.html
+++ b/inde.html
@@ -1,12 +1,286 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>TKC</title>
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <header class="nuv">
+            <h1>
+                <img src="./images/title.svg" alt="デジタル庁">
+            </h1>
+            <a href="#" class="home">ホーム</a>
+            <p class="type">利用者別</p>
+            <ul>
+                <li><a href="#">一般</a></li>
+                <li><a href="#">行政・事業者</a></li>
+                <li><a href="#">報道関係者</a></li>
+            </ul>
+            <p>目的別</p>
+            <ul>
+                <li><a href="#">サービスを見る</a></li>
+                <li><a href="#">活動・施策を知る</a></li>
+                <li><a href="#">声を届ける</a></li>
+            </ul>
+        </header>
+        <div class="inform">
+            <p class="title">重要なお知らせ</p>
+            <div class="box top-box">
+                <a href="#">
+                    <p>マイナンバーカード関連サービスの誤登録等の事案について、ご自身での確認方法やご質問・ご不安にお答えします。マイナンバー総合フリーダイヤル（0120-95-0178）でも受け付けております
+                        <span>2023年5月27日</span></p>
+                </a>
+            </div>
+            <p class="title">トピック</p>
+            <div class="box img-box">
+                <a href="">
+                    <img src="./images/mynumber_1.jpg" alt="">
+                    <h2>マイナンバー制度・マイナンバーカードのご質問・ご不安にお答えします</h2>
+                </a>
+            </div>
+            <div class="box img-box">
+                <a href="">
+                    <img src="./images/mynumber_2.jpg" alt="">
+                    <h2>政策データダッシュボード（ベータ版）</h2>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>公金受取口座の登録支援に関するマニュアルの順守徹底及び登録された預貯金口座の総点検について</h2>
+                    <p>安心して公金受取口座の登録を行っていただき、迅速かつ確実な給付が実現できるよう、信頼の確保に引き続き取り組んでまいります。</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>マイナンバーカードの保険証情報の誤りに気づいたら</h2>
+                    <p>マイナンバーカードの保険証情報の誤りに関する問合せ先についてQAに追加しました。</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>スマホ用電子証明書搭載サービスを開始します</h2>
+                    <p>マイナンバーカードなしで、スマートフォンだけで、様々なサービスの利用や申し込みができるようになります。</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>デジタル庁の四半期活動報告を行いました</h2>
+                    <p>浅沼デジタル監より、2023年1月から3月までの四半期の活動内容を報告いたしました。</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>デジタル庁では日本のDXに取り組む仲間を募集しています</h2>
+                    <p>新卒(24卒)、中途採用を積極募集しています。</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>新しいマイナポータルを体験できます</h2>
+                    <p>マイナポータル実証アルファ版をリリースしました。スマートフォンにてぜひご体験ください。</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>新型コロナワクチン接種証明書アプリ</h2>
+                    <p>新型コロナワクチン接種証明書をアプリで取得できます</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>Visit Japan Webサービス</h2>
+                    <p>海外から日本への入国時の手続に必要な情報を、事前にオンラインで入力できます。</p>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>マイナポータルハッカソン受賞者を発表しました</h2>
+                    <p>6月12日まで開催していたマイナポータルハッカソンのデジタル大臣賞、優秀作品賞など受賞者を発表しました。</p>
+                    <span>2023年6月13日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>河野デジタル大臣が米国へ出張しました</h2>
+                    <p>2023年5月3日から7日にかけて、米国に出張し、G7デジタル・技術大臣会合の成果を発信し、グローバルなシンクタンクやイノベーティブな取組で知られる企業など、各界のリーダーとの意見交換を行いました。
+                    </p>
+                    <span>2023年5月8日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>G7群馬高崎デジタル・技術大臣会合の開催結果</h2>
+                    <p>2023年4月29日及び30日、デジタル庁、総務省、経済産業省は共同で、群馬県高崎市において「G7群馬高崎デジタル・技術大臣会合」を開催しました。</p>
+                    <span>2023年4月30日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>ウクライナとデジタル分野における協力覚書（MoC）の署名式を行いました</h2>
+                    <p>2023年4月26日、河野太郎デジタル大臣はウクライナのミハイロ・フェードロフ副首相兼デジタル大臣とオンラインでデジタル分野における協力覚書の署名式を行いました。</p>
+                    <span>2023年4月26日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>GW期間中のマイナンバーカード関係手続の一部を停止します</h2>
+                    <p>2023年4月29日（土）から5月7日（日）まで電子証明書のスマートフォン搭載等に向けた公的個人認証システムの更改作業実施のため、関係手続の一部を停止します。</p>
+                    <span>2023年4月25日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>トラストのためのデジタル技術に関するステークホルダー会議を開催しました</h2>
+                    <p>2023年3月29日にG7群馬高崎デジタル・技術大臣会合の関連イベントを開催しました。</p>
+                    <span>2023年3月31日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>公金受取口座登録に係る郵送通知の複数発送について（終報）</h2>
+                    <p>3月24日（金）付で郵送通知の複数発送のインシデントの第一報を公表した件の続報を掲載します。</p>
+                    <span>2023年3月27日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>郵送通知の複数発送のインシデントの第一報</h2>
+                    <p>確定申告（マイナンバーカード方式以外）で公金受取口座をご登録いただいた方に複数の結果通知を送付する事例が発生いたしました。</p>
+                    <span>2023年3月24日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>マイナンバーカードのエンタメ領域における活用について</h2>
+                    <p>マイナンバーカードのライブやエンタメにおける活用について、デジタル庁と関係団体と連携して取り組んでいきます。</p>
+                    <span>2023年3月24日</span>
+                </a>
+            </div>
+            <div class="box p-box">
+                <a href="#">
+                    <h2>G7群馬高崎デジタル・技術大臣会合の公式サイトを公開しました</h2>
+                    <p>2023年4月29日（土）、30日（日）「G7群馬高崎デジタル・技術大臣会合」を群馬県で開催します。会合の成果や、展示、関連イベント、交通情報などの公式サイトで随時お知らせいたします。</p>
+                    <span>2023年3月23日</span>
+                </a>
+            </div>
+        </div>
+        <div class="sub-nuv">
+            <ul>
+                <li><a href="#">サイト内検索</a></li>
+            </ul>
+            <ul class="sub-nuv-new">
+                <li><a href="#">新着・更新情報</a></li>
+                <li><a href="#">プレスルーム</a></li>
+                <li><a href="#">大臣等会見</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">組織情報</a></li>
+                <li><a href="#">政策</a></li>
+                <li><a href="#">会議等</a></li>
+                <li><a href="#">法令</a></li>
+                <li><a href="#">採用</a></li>
+                <li><a href="#">資料</a></li>
+                <li><a href="#">申請・届出</a></li>
+                <li><a href="#">調達情報</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Global Site</a></li>
+            </ul>
+            <div>
+                <p class="title">注目のトピック</p>
+                <ul>
+                    <li><a href="#">マイナンバー制度・マイナンバーカードのご質問・ご不安にお答えします</a></li>
+                    <li><a href="#">政策データダッシュボード（ベータ版）</a></li>
+                </ul>
+            </div>
+            <div class="sub-nuv-policy">   
+                <ul>
+                    <li><a href="#">サイトポリシー</a></li>
+                    <li><a href="#">プライバシーポリシー</a></li>
+                    <li><a href="#">ウェブアクセシビリティ</a></li>
+                </ul>
+                <ul class="policy">
+                    <li><a href="#">コピーライトポリシー</a></li>
+                    <li><a href="" class="policy-a">SNS</a></li>
+                </ul>
+                <ul class="policy">
+                    <li><a href="#">ご意見・ご要望</a></li>
+                    <li><a href="" class="policy-a">サイトマップ</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="wrapper">
+            <div class="nuv">
+                <h1>
+                    <img src="./images/title.svg" alt="デジタル庁">
+                </h1>
+                <a href="#" class="home">ホーム</a>
+                <p>利用者別</p>
+                <ul>
+                    <li><a href="#">一般</a></li>
+                    <li><a href="#">行政・事業者</a></li>
+                    <li><a href="#">報道関係者</a></li>
+                </ul>
+                <p>目的別</p>
+                <ul>
+                    <li><a href="#">サービスを見る</a></li>
+                    <li><a href="#">活動・施策を知る</a></li>
+                    <li><a href="#">声を届ける</a></li>
+                </ul>
+            </div>
+            <div class="inform">
+                <p class="title">新しいトピック</p>
+                <div class="footer-box box">
+                    <a href="#">
+                        <h3>マイナンバーカードの機能のスマートフォン搭載に関する検討会（第3回）の会議資料を掲載しました</h3>
+                        <span>2023年6月19日</span>
+                    </a>
+                </div>
+                <div class="footer-box box">
+                    <a href="#">
+                        <h3>「モビリティ・ロードマップ」のありかたに関する研究会（第2回）を開催しました</h3>
+                        <span>2023年6月14日</span>
+                    </a>
+                </div>
+                <div class="footer-box box">
+                    <a href="#">
+                        <h3>マイナポータルハッカソン受賞者を発表しました</h3>
+                        <span>2023年6月13日</span>
+                    </a>
+                </div>
+            </div>
+            <div class="sub-nuv">
+                <p class="title">デジタル庁へのアクセス</p>
+                <span>〒102-0094　東京都千代田区紀尾井町1-3　東京ガーデンテラス紀尾井町 19階、20階</span>
+                <ul>
+                    <li>
+                        <a href="https://twitter.com/digital_jpn">
+                            <img src="./images/twitter.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCKmJk25wcPwCecf7nV9HwCw">
+                            <img src="./images/youtube.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                         <a class="digital-gov" href="https://digital-gov.note.jp/">
+                            <img src="./images/original_logo.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
